--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,14 @@
 /* Body */
 
 body {
+    background-color: floralwhite;
+    height: auto;
+    width: 100%;
+    display: flexbox;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
 
 }
 
@@ -63,9 +71,86 @@ p {
     font-family:'Girassol', cursive; 
 }
 
+a {
+    font-family: 'Bebas Neue', cursive;
+    font-weight: bold; 
+}
+
 /* Header & Nav */
 
+header {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    color: ivory;
+    background-color: black;
+    box-shadow: 5px 5px darkred;
+}
+
+.headerDiv {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    max-width: 20%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 20%; 
+    font-size: 1.5vw; /* set size for smaller screens */
+}
+
+nav {
+    display: flex;
+    max-width: 33%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 20%;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    align-self: center;
+    width: 100%;
+}
+
+nav li {
+    display: inline;
+    font-size: 1.5vw;
+/* Need to set size for smaller screen */
+}
+
+nav a {
+    color: ivory;
+}
+
 /* Splash & Title */
+
+#titleSplash {
+    display: flex;
+    flex-wrap: wrap;
+    background-image: url('media/splash.jpg');
+    background-position: center;
+    background-repeat: repeat-x;
+    background-size: auto;
+    width: 100%;
+    height: 500px;
+    justify-content: center;
+    align-content: center;
+    margin-top: 5px;
+}
+
+#titleSplash h1 {
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+    font-size: 5vw;
+    color: white;
+}
 
 /* Mission Statement */
 
