--- a/styles.css
+++ b/styles.css
@@ -133,15 +133,20 @@ nav a {
 #titleSplash {
     display: flex;
     flex-wrap: wrap;
-    background-image: url('media/splash.jpg');
+    flex-grow: 2;
+    background-image: url('media/splashRedacted.jpg');
     background-position: center;
     background-repeat: repeat-x;
     background-size: auto;
-    width: 100%;
-    height: 500px;
+    min-height: 333px;
+    max-height: 667px;
     justify-content: center;
     align-content: center;
-    margin-top: 5px;
+    justify-self: center;
+    margin-top: 10px;
+    margin-left: 7%;
+    margin-right: 7%;
+    box-shadow: 5px 5px darkred;
 }
 
 #titleSplash h1 {
@@ -153,6 +158,35 @@ nav a {
 }
 
 /* Mission Statement */
+
+#mission {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 2;
+    height: 500px;
+    justify-content: center;
+    align-content: center;
+    background-image: url('media/dick.jpg');
+    background-repeat: repeat;
+    background-size: auto;
+    margin-top: 3%;
+    margin-left: 7%;
+    margin-right: 7%;
+    justify-self: center;
+}
+
+#missionStatement {
+    width: 90%;
+    border: 5px double black;
+    opacity: .75;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+    color: black;
+    background-color: white;
+    font-size: 2vw;
+    line-height: 1.5;
+}
 
 /* Products */
 
